App should be rock solid against exploits or cheating. Category is now not decided until wheel in spun. Did some refactoring to clean up and generalize some methods.

--- a/app/views/play/display_question_rating.html.erb
+++ b/app/views/play/display_question_rating.html.erb
@@ -26,6 +26,10 @@
         $('#submit_question').click(function() {
             $('body').load(<%= new_question_path %>);
         });
+        $.ajax({
+            url: "play/finish_question",
+            type: 'PUT'
+        });
         function ChangePage()
         {
             var meter = <%= current_user.active_player.meter %>;
