--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -2,6 +2,8 @@
   BACK</button>
 <% if !current_user.active_player.isActivePlayer %>
     <h1>Awaiting opponent's turn</h1>
+    <img src= "/images/wait_centerspin.png" id="center">
+    <img src= "/images/spinner.png" id="spinner">
 <% elsif current_user.active_player.challenges.first.nil?%>
     <h1>Spin the Wheel!!!</h1>
     <img src= "/images/centerspin.png" id="center">
@@ -35,27 +37,35 @@
 
     jQuery(document).ready(function()
     {
+        var rotations = Math.floor((Math.random() * 100000) + 80000);
+        var category_number = rotations % 360;
         $("#center").rotate({
             bind:
             {
                 click: function(){
+                    $.ajax({
+                        url: "play/get_random_category",
+                        type: 'PUT',
+                        dataType: 'json',
+                        data: {'rotations' : rotations}
+                    });
                     <% if current_user.active_player.isActivePlayer && current_user.active_player.challenges.first.nil?%>
-                    $("#spinner").rotate({ angle:0,animateTo:<%= @rotations %>,easing: $.easing.easeInOutExpo }, setTimeout(ChangePage, 1000));
+                     $("#spinner").rotate({ angle:0,animateTo: rotations,easing: $.easing.easeInOutExpo });
                     spinSound.playclip();
+                    if (category_number >= 309 && category_number <= 359) {
+                        setTimeout(GetFullMeterChoice, 1000);
+                    }
+                    else {
+                        setTimeout(GetQuestions, 1000);
+                    }
                     <% end %>
                 }
             }
         });
     });
-    function ChangePage()
+    function GetFullMeterChoice()
     {
-        var meter = <%=current_user.active_player.meter%>;
-        if ((meter == 3)) {
-            $('body').load('/play/display_full_meter_choice.html');
-        }
-        else {
-            GetQuestions();
-        }
+        $('body').load('/play/display_full_meter_choice.html');
     }
     function GoBack()
     {
